     undoing unless they contain [allow_undo].
   * The cost of a recall/recruit is now paid between the prerecall/prerecruit
     and recall/recruit events. (FR #16711)
   * Sighted events should be reliable, provided the player does not activate
     delayed shroud updates (which is still a major caveat).
   * Added [effect] apply_to=overlay
   * Added [terrain_type] max_light= and min_light=.
   * Standardize weapon filters, supporting special=, [and], [or], and [not]
     wherever weapons can be filtered.
 * Miscellaneous and bug fixes:
   * Fix invalid memory access crash resulting from deleting all saved games
     in the Load Game dialog
   * Redesigned the hotkey preferences dialog
   * Removed two Khalifate leftovers (Hakim portrait and KHALIFATE_NAMES macro)
   * Hex field size and default terrain are wml configurable
   * Fix OOS when dismissing a recall in a multiplayer campaign (bug #19924).

Version 1.11.0:
 * Add-ons client:
   * The Update Add-ons dialog has been replaced with an alternate view mode
     for the main Add-ons Manager
   * The Add-ons Manager now allows filtering add-ons by installation status
     (all, installed, not installed, upgradable)
   * Add-ons in the Add-ons Manager are initially sorted by title instead of
     the order they were originally uploaded to the server
   * Add-ons with broken/unavailable dependencies are reported to the user
   * The add-on dependencies prompt reports all recursively-resolved
     dependencies, not just the direct dependencies
   * Add-on installation, upgradability, and publish status is reported as a
     footnote for every list entry, plus a field in the Description dialog
   * The Add-ons Manager filter textbox is preserved during the same
     connection (i.e. while installing multiple add-ons)
 * Add-ons server:
   * Reject add-ons with names or titles that begin with a WML text format
     markup character (any of *, `, ~, {, ^, }, |, @, #, <, &)