@@ -32,6 +32,7 @@ Version 1.11.0+svn:
    * Sighted events should be reliable, provided the player does not activate
      delayed shroud updates (which is still a major caveat).
    * Added [effect] apply_to=overlay
+   * Added [effect] apply_to=experience
    * Added [terrain_type] max_light= and min_light=.
    * Standardize weapon filters, supporting special=, [and], [or], and [not]
      wherever weapons can be filtered.
